# pulselink

./: CLAUDE.md  CMakeLists.txt  DECISIONS.md  LICENSE  PLAN.md  PRD.md  TRD.md
.github/workflows/: ci.yml
articles/: part1-esp-now-fundamentals.md  part2-two-boards-talking.md  part3-channel-problem-pairing.md  part4-building-the-mqtt-gateway.md
core/: pl_cmdtable.h  pl_config.h  pl_fields.h  pl_frame.h  pl_join.h  pl_nack.h  pl_registry.h  pl_ring.h  pl_topics.h
examples/part2-node-to-node/: CMakeLists.txt  README.md  host_demo.cpp
examples/part2-node-to-node/receiver/: receiver.ino
examples/part2-node-to-node/sender/: sender.ino
examples/part3-pairing/: CMakeLists.txt  README.md  host_demo.cpp
examples/part3-pairing/gateway_join/: gateway_join.ino
examples/part3-pairing/node_join/: node_join.ino
examples/part4-gateway/: CMakeLists.txt  README.md  host_bridge_demo.cpp
gateway/: README.md  gateway.ino  pl_nvs_registry_storage.h  pl_pubsubclient_mqtt.h
node/: README.md  node.ino
test/: CMakeLists.txt  main.cpp  pl_test.h  test_cmd_flow.cpp  test_cmd_status.cpp  test_cmdtable.cpp  test_dedupe.cpp  test_fake_mqtt.cpp  test_fake_transport.cpp  test_fields.cpp  test_frame.cpp  test_gateway_bridge.cpp  test_gateway_hsm.cpp  test_health_metrics.cpp  test_join.cpp  test_join_flow.cpp  test_loss_tracker.cpp  test_registry.cpp  test_ring.cpp  test_skeleton.cpp  test_spool.cpp  test_topics.cpp
transport/: pl_transport.h
transport/espnow/: README.md  pl_espnow_transport.h
transport/fake/: README.md  pl_fake_mqtt.h  pl_fake_transport.h
wokwi/: README.md
wokwi/gateway-node/: README.md  diagram.json  sync.py
wokwi/gateway-node/gateway/: gateway.ino  pl_transport.h
wokwi/gateway-node/node/: node.ino  pl_espnow_transport.h
wokwi/single-board/: README.md  diagram.json  sync.py
wokwi/single-board/combined/: combined.ino  pl_cmd_status.h  pl_cmdtable.h  pl_config.h  pl_dedupe.h  pl_fake_transport.h  pl_fields.h  pl_gateway_hsm.h  pl_join.h  pl_loss_tracker.h  pl_mac.h  pl_mqtt.h  pl_nvs_registry_storage.h  pl_pubsubclient_mqtt.h  pl_ring.h  pl_spool.h
